--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "@testing-library/user-event": "^12.7.1",
     "bootstrap-icons": "^1.4.0",
     "date-fns": "^2.17.0",
+    "firebase": "^9.6.7",
+    "moment": "^2.29.1",
+    "randomcolor": "^0.6.2",
     "react": "^17.0.1",
     "react-bootstrap-icons": "^1.3.0",
     "react-dom": "^17.0.1",
