--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-bootstrap-icons": "^1.3.0",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.2",
+    "react-spring": "^9.4.3",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
